Redesigned ant build process for Java submissions to use one JVM instead of forking a new one for test execution.  Lots of struggles to get the sandboxing to work correctly, but now fixed.